# wireshark-for-noobs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  release.yml
config/: users.db.template  wireshark_mcp.conf.template
docs/dev/: development_guide.md
docs/user/: user_guide.md
scripts/: install_linux.sh  install_windows.ps1
src/: main.cpp
src/analysis/: protocol_analyzer.cpp  protocol_analyzer.h
src/capture/: packet_capture.cpp  packet_capture.h
src/common/: config.cpp  config.h  logging.cpp  logging.h
src/security/: auth_manager.cpp  auth_manager.h  security_manager.cpp  security_manager.h
src/storage/: capture_file.cpp  capture_file.h
src/ui/: main_window.cpp  main_window.h
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  capture_integration_test.cpp  file_operations_test.cpp  main.cpp  ui_test.cpp
tests/unit/: CMakeLists.txt  capture_test.cpp  config_test.cpp  security_test.cpp
